优化持久层适配器setObject参数方法，根据具体类型选择合适的类型set方法，以处理类似Clickhouse官方驱动不能正确识别setObject参数类型问题